--- a/Models/SpeechLM/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM/2024.01.25_VALL-T.md
@@ -36,7 +36,7 @@ It also enables the synthesis of lengthy speech by utilizing an aligned context 
 The audio samples are available at http://cpdu.github.io/vallt.
 
 
-## 1.Introduction·引言
+## 1·Introduction·引言
 
 Text-to-speech (TTS) synthesis is a monotonic sequence-to-sequence task, maintaining a strict order between the input phoneme sequence and the output speech sequence.
 Moreover, the output speech sequence is at frame-level and one phoneme may correspond to multiple frames of speech, so the output sequence is significantly longer than its corresponding input phoneme sequence.
@@ -68,9 +68,9 @@ To the best of our knowledge, this is the first work that implements Transducer 
 - ***VALL-T*** utilizes implicit duration modeling, removing the necessity for acquiring phoneme durations before training.
 - The alignment controllability of ***VALL-T*** during decoding enables the utilization of untranscribed speech prompts, even in unknown languages.
 
-## 2.Related Work·相关工作
+## 2·Related Work·相关工作
 
-### 2.1.Decoder-Only Zero-Shot TTS with Speech Prompts·使用语音提示的仅解码器的零样本TTS
+### 2.1·Decoder-Only Zero-Shot TTS with Speech Prompts·使用语音提示的仅解码器的零样本TTS
 
 Zero-shot TTS refers to the ability to generate speech in the voice of an unseen speaker given only a short sample of that speaker’s speech.
 Decoder-only TTS models, such as [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), are able to perform zero-shot speaker adaptation through auto-regressive continuation from the target speaker’s sample.
@@ -82,7 +82,7 @@ In the inference phase, as shown in Fig.01(b), a speech prompt yp is required to
 The phoneme transcription of the speech prompt xp and the speech prompt itself yp are positioned at the beginning of the input and output sequences respectively, followed by the input phonemes to be generated and their corresponding output speech tokens.
 The process of auto-regressive continuation from the speech prompt is believed to preserve the speaker’s voice in the generated output.
 
-### 2.2.Transducer·转录器
+### 2.2·Transducer·转录器
 
 The Transducer model (Graves, 2012), also known as RNN- T, is designed for monotonic sequence-to-sequence tasks and comprises three components: an encoder, a prediction network, and a joint network.
 Here, the prediction network is an auto-regressive network, such as RNN and LSTM.
@@ -103,7 +103,7 @@ However, its modularized architecture is not suitable enough for generation task
 Recently, some literatures have explored the application of Transducer to TTS (Chen et al., 2021; Kim et al., 2023), but they still rely on the typical modularized architecture and consequently result in limited performance.
 Different from the previous works, we propose for the first time to implement Transducer with a decoder-only architecture that achieves better performance.
 
-## 3.VALL-T: Decoder-Only Generative Transducer·VALL-T: 仅解码器的生成转录器
+## 3·VALL-T: Decoder-Only Generative Transducer·VALL-T: 仅解码器的生成转录器
 
 Current modularized Transducer model has demonstrated significant success in ASR.
 Nevertheless, its suitability for generation tasks is limited.
@@ -116,7 +116,7 @@ Consequently, the joint network is unable to explicitly perceive the input conte
 To address the above issues, we propose ***VALL-T*** that integrates the encoder, the prediction network and the joint network into one single decoder-only Transformer architecture and leverages relative position embedding to denote the corresponding positions.
 We discuss the training and inference details below.
 
-### 3.1.Training·训练
+### 3.1·Training·训练
 
 We use a decoder-only architecture for ***VALL-T***.
 Similar to the approach in the previous work [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), we concatenate the input phoneme and output speech tokens along the time axis and present them to the model as a unified sequence.
@@ -140,7 +140,7 @@ Illustrated in Fig.03, we iteratively assign relative position0to each of theT p
 This stacking process results in a matrix p of shapeT × (U + 1).
 The optimization of ***VALL-T*** utilizes the Transducer loss, calculated using this matrix and the ground-truth speech tokens, to maximize the probability of p(y|x) following Equation (1).
 
-### 3.2.Monotonic Auto-Regressive Inference·单调自回归推理
+### 3.2·Monotonic Auto-Regressive Inference·单调自回归推理
 
 Let us first consider the auto-regressive inference process without a speech prompt.
 Initially, the relative position 0is designated to the first phoneme, starting the speech generation from the `<sos>` token.
@@ -155,7 +155,7 @@ The two sequences are followed by the input phonemes to be generated and their c
 Given that the speech prompt are provided, we assign the relative position 0 to the first phoneme right after the prompt transcription, as shown in Fig.03, and perform speech continuation.
 Likewise, the relative positions undergo a shift each time \varnothing emerges, repeating until the generation for the final phoneme is completed.
 
-### 3.3.Pseudo Prompt Transcription for Untranscribed Speech Prompt·未转录语音提示的伪提示转录
+### 3.3·Pseudo Prompt Transcription for Untranscribed Speech Prompt·未转录语音提示的伪提示转录
 
 In previous decoder-only TTS models, the alignment is learned implicitly with self-attentions.
 These models have to discern which phoneme is currently being synthesized at each time step solely based on the self-attentions between the input tokens and the preceding output tokens.
@@ -171,7 +171,7 @@ We need to avoid unseen alignment pattern in the view of absolute position embed
 Moreover, since there is no necessity for transcribing the speech prompt, the utilization of untranscribed speech prompts can be expanded to include prompts in unknown languages.
 This enables cross-lingual zero-shot adaptive speech synthesis.
 
-### 3.4.Aligned Context Window for Lengthy Speech Synthesis·长语音合成的上下文对齐窗口
+### 3.4·Aligned Context Window for Lengthy Speech Synthesis·长语音合成的上下文对齐窗口
 
 Decoder-only Transformer models have very limited ability to generalize to unseen position embeddings.
 That means if we are synthesizing lengthy speech that exceeds the maximum length encountered during training, the performance would be degraded.
@@ -181,9 +181,9 @@ Specifically, at each decoding step, we retain only n phonemes that precede the 
 Also, we preserve only the speech tokens corresponding to the n preceding phonemes given the alignment and discard more distant history, forming a context window on the output sequence as well.
 Hence, by leveraging aligned context window, ***VALL-T*** consistently maintains a limited context on both input and output sequence, allowing it to generate speech of any lengths.
 
-## 4.Experiments and Results·实验与结果
+## 4·Experiments and Results·实验与结果
 
-### 4.1.Setup·设置
+### 4.1·Setup·设置
 
 In our experiments, we leverage our [Encodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) (Defossez et al., 2022) speech tokenizer whose frame shift is 20ms and the sampling rate of output waveforms is 16k.
 It comprises 8 residual vector quantization (RVQ) indices for each frame.
@@ -197,7 +197,7 @@ Its training set consists of approximately 580 hours of speech data from 2,306 s
 We train our model for 40 epochs using a ScaledAdam (Yao et al., 2023) optimizer.
 The learning rate scheduler is Eden (Yao et al., 2023) with a base learning rate of0.05, an epoch scheduling factor of 4 and a step scheduling factor of 5000.
 
-### 4.2.Alignment Analysis·对齐分析
+### 4.2·Alignment Analysis·对齐分析
 
 We first do alignment analysis to check if relative position embedding in ***VALL-T*** indicates the alignment as expected.
 Given the speech y and its transcription x, we iterate over all relative positions and calculate the matrix p of output distributions in the shape ofT ×(U +1).
@@ -215,7 +215,7 @@ Accordingly, ***VALL-T*** is capable of forced alignment, where the most probabl
 The alignment path for this example is depicted in Fig.04(d).
 Since ground-truth labels for alignment are unavailable, our alignment analysis here only focuses on qualitative aspects.
 
-### 4.3.Evaluation on Zero-Shot TTS·零样本TTS的评估
+### 4.3·Evaluation on Zero-Shot TTS·零样本TTS的评估
 
 In this section, we conduct an evaluation of our models on zero-shot TTS task.
 The task refers to synthesizing speech in the voices of unseen speakers given speech prompts and their corresponding transcriptions.
@@ -244,7 +244,7 @@ Finally, the evaluation extends to the calculation of Speaker Embedding Cosine S
 This metric measures the speaker similarity by assessing the cosine similarity between the speaker embeddings of the generated speech and the provided speech prompt.
 While ***VALL-T*** exhibits a marginally lower SECS value than [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), it still surpasses other models and does not detrimentally affect human perception according to the results of subjective listening tests on similarity.
 
-### 4.4.Leveraging Untranscribed Speech Prompts·利用未转录语音提示
+### 4.4·Leveraging Untranscribed Speech Prompts·利用未转录语音提示
 
 The alignment controllability of ***VALL-T*** allow us to leverage untranscribed speech prompts for zero-shot TTS.
 In this experiment, we still use a same test set as in the previous section, excluding the transcription of the speech prompts to simulate a scenario where prompt transcriptions are unavailable.
@@ -276,7 +276,7 @@ On the contrary, ***VALL-T*** still successfully performs the zero-shot TTS from
 Note that the similarity MOS and SECS in this experiment cannot be directly compared with the corresponding results in Tab.01 and 2 since the speakers of the speech prompts differ.
 We do not have corresponding ground-truth speech that speaks the utterances in the test set in the voice of German and Spanish speakers, so we also do not calculate the MCD in this experiment.
 
-### 4.5.Evaluation on Lengthy Speech Generation·长语音生成的评估
+### 4.5·Evaluation on Lengthy Speech Generation·长语音生成的评估
 
 We also evaluate our model on lengthy speech synthesis that exceeds the maximum length encountered during training.
 Due to the limitation of GPU memory, the maximum duration of training utterances is approximately 15 seconds.
@@ -289,7 +289,7 @@ In contrast, [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) often starts mumb
 Upon applying the aligned context window, the WER of ***VALL-T*** further decreases and approaches the result of generating normal utterances.
 Additionally, the gap in MOS scores for naturalness and speaker similarity between generated speech and ground-truth is also comparable to the result of synthesizing normal utterances.
 
-## 5.Conclusion·结论
+## 5·Conclusion·结论
 
 In this research, we present ***VALL-T***, a decoder-only generative Transducer model designed to improve the robustness and controllability of TTS models.
 ***VALL-T*** incorporates monotonic alignment constraints into the decoder-only TTS framework, enabling implicit modeling of phoneme durations.
