--- a/Models/SpeechLM/2024.04.03_CLaM-TTS.md
+++ b/Models/SpeechLM/2024.04.03_CLaM-TTS.md
@@ -28,14 +28,14 @@ To mitigate these issues, we present **CLaM-TTS** that employs a probabilistic r
 Our experimental results demonstrate that **CLaM-TTS** is better than or comparable to state-of-the-art neural codec-based TTS models regarding naturalness, intelligibility, speaker similarity, and inference speed.
 In addition, we examine the impact of the pretraining extent of the language models and their text tokenization strategies on performances.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
