--- a/Models/SpeechLM/2024.04.10_LLaMA-VITS.md
+++ b/Models/SpeechLM/2024.04.10_LLaMA-VITS.md
@@ -28,7 +28,7 @@ This research introduces an innovative approach, ***LLaMA-VITS***, which enhance
 By leveraging [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md) for the primary speech synthesis process, our experiments demonstrate that ***LLaMA-VITS*** matches the naturalness of the [original VITS](../../Models/E2E/2021.06.11_VITS.md) (**ORI-VITS**) and those incorporate **BERT** (**BERT-VITS**), on the *LJSpeech* dataset, a substantial collection of neutral, clear speech.
 Moreover, our method significantly enhances emotive expressiveness on the *EmoV_DB_bea_sem* dataset, a curated selection of emotionally consistent speech from the *EmoV_DB* dataset, highlighting its potential to generate emotive speech.
 
-## 1.Introduction
+## 1·Introduction
 
 *Text-to-Speech (TTS)* synthesis is a technology that transforms written text into its spoken equivalent, thereby enhancing content accessibility.
 This technology finds application in the production of audiobooks (Chen et al., 2022) and virtual assistants (Wu et al., 2023).
@@ -46,14 +46,14 @@ The main contributions encapsulate:
 - We quantitatively verified our findings using both subjective and objective metrics.
 Our code, models, audio demos, and the filtered single female speaker emotional dataset *EmoV_DB_bea_sem* are available at https://github.com/xincanfeng/vitsgpt.git.
 
-## 2.Related Works
+## 2·Related Works
 
 TTS technology has significantly advanced in learning acoustic features through structural evolution.
 However, comprehending and conveying semantics remain challenging.
 Since **BERT-like LMs** have demonstrated profound capabilities in understanding semantics through extensive pre-training on vast text corpora, some studies have integrated **BERT-like LMs** with TTS technology to enhance synthesized speech.
 Nonetheless, research on incorporating **GPT-like LMs** within TTS technology is notably scarce.
 
-### 2.1.Text-to-Speech Models
+### 2.1·Text-to-Speech Models
 
 TTS task aims to generate natural, fluent, and easily comprehensible speech.
 Traditional TTS systems, e.g., a **Statistical Parametric Speech Synthesis (SPSS)** system (Taylor, 2009), usually comprise multiple distinct components.
@@ -101,7 +101,7 @@ Li et al. (2023) introduced a phoneme-level **BERT**, designed with a preliminar
 However, despite **BERT**’s acknowledged capacity to provide detailed word importance, syn tactic and semantic insights, and general knowledge (Hayashi et al., 2019; Kenter et al., 2020), its effectiveness is constrained by the particularities of fine-tuning approaches.
 Furthermore, **BERT**’s inherent non-generative nature might limit its ability to account for information outside the immediate sentence context.
 
-### 2.3.Integrating GPT-like LMs for TTS
+### 2.3·Integrating GPT-like LMs for TTS
 
 Considering semantic understanding and expression capabilities, **BERT** is primarily utilized for com prehension tasks.
 In comparison, **GPT** excels not only in understanding text but also in generating natural and coherent text.
@@ -123,7 +123,7 @@ Additionally, the novel architecture of [LLaMA2 (2023)](../TextLM/2023.07.18_LLa
 
 Related research that employs [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md) in speech and other multimodal tasks (Radhakrishnan et al., 2023; Zhang et al., 2023), coupled with the ongoing efforts to reduce computing costs associated with LLaMA2, underscores the model’s significant research interest and its promising prospects in multimodal applications.
 
-## 3.Methodology
+## 3·Methodology
 
 ![](Images/2024.04.10_LLaMA-VITS_Fig.01.png)
 
@@ -133,7 +133,7 @@ In essence, we extract semantic embeddings $E_{s}$ from the final hidden layer o
 Specifically, either a global token or a sequence of tokens is used to encapsulate the semantic attributes of an input sentence for varying objectives.
 The distinctions between these two token types are further explicated in Sec.3.1.
 
-### 3.1.Semantic Embeddings Derived from LLaMA2
+### 3.1·Semantic Embeddings Derived from LLaMA2
 
 For each input sentence $s$, we extract information from the final hidden layer before the output of [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md).
 Different strategies are employed to cre ate various tokens that serve as the semantic em bedding for the sentence.
@@ -217,7 +217,7 @@ $$
 In both strategies, $H_{LLaMA}^F(s, i)$ and $H_{LLaMA}^F(s_{pho}, i)$ respectively represent the outputs of the $i$ th token of sentence $s$ in its textual and phonemic forms at the final hidden layer $F$ of [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md).
 This representation allows the TTS model to leverage the complete semantic information of a sentence, whether based on text or phonemes.
 
-### 3.2.Fusing Semantic Embeddings with Acoustic Embeddings
+### 3.2·Fusing Semantic Embeddings with Acoustic Embeddings
 
 To align the dimensions of semantic embedding extracted from [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md), denoted as $E_{s}$, with the acoustic embeddings from [VITS](../E2E/2021.06.11_VITS.md), denoted as $E_{a}$, we employ a linear projection.
 The original dimension of $E_{s}$, $d_{LLaMA}$, is projected to match the dimension of [VITS (2021)](../E2E/2021.06.11_VITS.md) acoustic embedding, $d_{VITS}$, using a linear transformation matrix $W$ of dimensions $d_{VITS}\times d_{LLaMA}$.
@@ -267,9 +267,9 @@ $$
 
 The output $E_{as}$ , viewed as text embedding fused with semantic information, has dimensions $[b, t, d]$ that match those of $q$.
 
-## 4.Experiments
+## 4·Experiments
 
-### 4.1.Experimental Settings
+### 4.1·Experimental Settings
 
 We propose ***LLaMA-VITS*** which uses semantic to kens derived from [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md) to enhance acoustic embedding in [VITS](../E2E/2021.06.11_VITS.md) for better TTS performance.
 To show the effectiveness of our method, we experimented with two baseline models.
@@ -335,33 +335,33 @@ We evaluate objective intelligibility by using Whisper-large (Radford et al., 20
 For calculating UTMOS, we use the implementation in SpeechMOS.
 For calculating MCD and ASR, we use the evaluation implementation of ESPnet (Hayashi et al., 2020, 2021).
 
-## 5.Experiment Results
+## 5·Experiment Results
 
 We evaluated our proposed ***LLaMA-VITS*** along with baselines **ORI-VITS** and **BERT-VITS** models on three distinct datasets: the full LJSpeech, the 1 hour LJSpeech, and EmoV_DB_bea_sem.
 The experimental outcomes provide a comprehensive understanding of the model performance and the impact of semantic tokens selection.
 A summary of these results is articulated below and can be referenced in Table 1.
 
-### 5.1.Results on full LJSpeech
+### 5.1·Results on full LJSpeech
 
 The **ORI-VITS** baseline, achieving a UTMOS of 4.19 ± 0.05, an MCD of7.32 ± 0.61, a CER of6.2, and a WER of 16.5.
 Enhancements were observed with the **BERT-VITS** baseline.Specifically, **BERT-VITS** with `[BERT_TEX]` semantic tokens demonstrated superior performance in UTMOS (4.22±0.05) and MCD (7.27 ± 0.61), indicating improved speech quality and reduced mel-cepstral distortion.
 Additionally, a reduced CER of5.9and WER of15.9were noted, highlighting enhanced automatic speech recognition accuracy.
 Our proposed ***LLaMA-VITS***, integrating various global and sequential semantic tokens, displayed competitive performance.The `[PCA]` strategy stood out, achieving an MCD of7.23 ± 0.61, indicating optimal mel-cepstral distortion.The `[EIS_Sentence]`, `[AVE]`, and `[LAST]` tokens yielded a top-tier UTMOS of4.21±0.04/0.05, underscoring their effectiveness in enhancing perceived speech quality.
 
-### 5.2.Results on 1-hour LJSpeech
+### 5.2·Results on 1-hour LJSpeech
 
 In the more challenging 1-hour LJSpeech dataset, all models experienced a slight performance de crease, an expected outcome given the reduced training data size.
 **BERT-VITS** baseline with `[CLS]` tokens exhibited notable MCD performance (7.39 ± 0.62), while the `[BERT_PHO]` excelled in UTMOS (4.05 ± 0.07), reflecting enhanced speech naturalness and reduced mel-cepstral distortion.
 ***LLaMA-VITS*** with `[AVE]` tokens achieved the high est UTMOS (4.10 ± 0.07), while `[EIS_Sentence]` tokens resulted in the most favorable MCD (7.36 ± 0.59), illustrating the model’s versatility and efficacy in different token configurations.
 
-### 5.3.Results on EmoV_DB_bea_sem
+### 5.3·Results on EmoV_DB_bea_sem
 
 On this even more challenging dataset, a small improvement observed in **BERT-VITS** only exists in the `[BERT_TEX]` with a CER of 4.4.
 While our proposed ***LLaMA-VITS*** displayed no table enhancements.
 The `[TEX]` strategy achieves an ESMOS of3.22 ± 0.07, indicating much more emotiveness.
 The `[LAST]` yielded the best performance on CER of4.3and WER of17.4, other strategies also perform better than or comparable to **BERT-VITS**, underscoring its effectiveness in enhancing perceived speech expressiveness.
 
-### 5.4.Analysis
+### 5.4·Analysis
 
 Speaking of the strengths of different tokens, **BERT** based tokens generally contribute to improving MCD and ASR scores, indicating the enriched semantic understanding translated to speech qual ity.
 Tokens of ***LLaMA-VITS*** exhibited a balanced performance across all metrics, with specific to ken configurations excelling in particular aspects.
@@ -374,11 +374,11 @@ For instance, in the UTMOS naturalness metric, ***LLaMA-VITS***’s global token
 Overall, ***LLaMA-VITS*** showed a different pattern in UTMOS compared to **BERT-VITS**, and superior performance in ESMOS.
 These results highlight the potential for further exploration of semantic to ken types and fusion methods to achieve more significant enhancements in speech synthesis, particularly in scenarios constrained by limited and complex training data.
 
-## 6.Discussion
+## 6·Discussion
 
 In this section, we discuss factors influencing current outcomes.Based on this discussion, we also point out the directions for future work in Appendix 13.
 
-### 6.1.GPT-like vs BERT-like
+### 6.1·GPT-like vs BERT-like
 
 Initial observations from our experiments indicate that, even without any fine-tuning of [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md), ***LLaMA-VITS*** significantly outperforms both **BERT-VITS** and **ORI-VITS** in terms of emotional expressive ness.
 This finding opens up avenues for future research into emotive TTS tasks.
@@ -386,19 +386,19 @@ Furthermore, a comparison between **BERT-VITS** and ***LLaMA-VITS*** highlights 
 **BERT-VITS**, leveraging deep con textual embeddings, provides profound semantic insights yet encounters challenges in customization and adaptability across a range of TTS tasks.
 Conversely, ***LLaMA-VITS*** can provide a more versa tile and adaptable approach, with its array of token types demonstrating particular advantages across various evaluation metrics.
 
-### 6.2.Semantic Token Strategy
+### 6.2·Semantic Token Strategy
 
 The varying effectiveness of distinct semantic to kens underscores the importance of careful selection and integration tailored to the particular goals of TTS systems.
 Optimizing the type of token and method of fusion can be instrumental in enhancing aspects such as speech naturalness, emotional expressiveness, *Mel Cepstral Distortion (MCD)*, or *Automatic Speech Recognition (ASR)* performance.
 
-## 7.Conclusion
+## 7·Conclusion
 
 In summary, this study exemplifies a significant stride towards optimized TTS synthesis by integrating semantic tokens, leveraging the strengths of ***LLaMA-VITS***.
 Our findings, validated by comprehensive experiments on the LJSpeech and EmoV_DB_bea_sem datasets, underscore the pivotal role of semantic embeddings in enhancing speech quality, naturalness, and emotiveness.
 The adaptability and efficacy of ***LLaMA-VITS***, especially, open new vistas for customized and context sensitive TTS applications.
 
 
-## 8.Limitations
+## 8·Limitations
 
 Compared with our baseline which uses different **BERT models**, we only tested our method using [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md).
 As Kenter et al. (2020) indicate for their **BERT-based TTS model**, small **BERT models** work better than big ones, but the parameter size of our proposed **GPT-based TTS** influence is yet stud ied by our research.
