--- a/Models/SpeechLM/2024.04.08_SpeechAlign.md
+++ b/Models/SpeechLM/2024.04.08_SpeechAlign.md
@@ -36,14 +36,14 @@ Through both subjective and objective evaluations, we show that ***SpeechAlign**
 Moreover, ***SpeechAlign*** exhibits robust generalization capabilities and works for smaller models.
 Code and models will be available at [this https URL](https://github.com/0nutation/SpeechGPT).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
