--- a/Models/SpeechLM/2024.11.01_Freeze-Omni.md
+++ b/Models/SpeechLM/2024.11.01_Freeze-Omni.md
@@ -34,7 +34,7 @@ Moreover, we can effectively ensure that the intelligence of the ***Freeze-Omni*
 In addition, we also designed a method to achieve duplex dialogue ability through multi-task training, making ***Freeze-Omni*** have a more natural style of dialogue ability between the users.
 ***Freeze-Omni*** mainly provides a possibility for researchers to conduct multimodal LLM under the condition of a frozen LLM, avoiding various impacts caused by the catastrophic forgetting of LLM caused by fewer data and training resources.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 In recent years, the development of large language models has been extremely rapid.
 A series of large language models represented by the GPT series~\citep{floridi2020gpt,achiam2023gpt} of OpenAI has demonstrated extraordinary capabilities.
@@ -76,11 +76,11 @@ It requires text-speech paired data (such as ASR and TTS training data) and only
 - ***Freeze-Omni*** can support any (multimodal) LLM that has a text modality and retains the abilities of the LLM such as prompt following and role-playing.
 Moreover, if it is necessary to change the style of the LLM's response, it is only necessary to fine-tune the LLM with text data in the corresponding style.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-### 3.1.Overview
+### 3.1·Overview
 
 ***Freeze-Omni*** is a speech-to-speech dialogue model and the architecture is shown in Fig.~\ref{fig:overview}, exhibiting the characteristic of being "smart" as it is constructed upon a "frozen" text-modality LLM.
 This enables it to keep the original intelligence of the LLM backbone, without being affected by the forgetting problem induced by the fine-tuning process for integration of the speech modality.
@@ -89,16 +89,16 @@ During the training process, ***Freeze-Omni*** first achieves the alignment betw
 Finally, by connecting these two components with the LLM, the ability of speech input to speech output is obtained.
 This section will provide a detailed introduction to the architecture, training strategy, and duplex dialogue design of ***Freeze-Omni***.
 
-### 3.2.Modeling of Speech Input
+### 3.2·Modeling of Speech Input
 
-#### 3.2.1.Chunk-Wise Streaming Speech Encoder
+#### 3.2.1·Chunk-Wise Streaming Speech Encoder
 
 To enable ***Freeze-Omni*** to support speech input and achieve a rapid and low-latency response to the input speech, it utilizes a chunk-wise streaming speech encoder to transform the input speech features into a high-dimensional representation.
 Then, an adapter module maps the high-dimensional representation into the embedding space of the backbone LLM.
 The speech encoder module here consists of several down-sampling convolution layers and several Transformer~\citep{DBLP:conf/nips/VaswaniSPUJGKP17} blocks, while the adapter only comprises several down-sampling convolution layers.
 The reason for using down-sampling is to reduce the frame rate of the speech features, increase the speed of the LLM in the prefill stage, and decrease the latency.
 
-#### 3.2.2.Training Strategy
+#### 3.2.2·Training Strategy
 
 A 3-stage training strategy shown in Fig.~\ref{fig:speech_input} is used for the speech encoder, enabling ***Freeze-Omni*** to acquire the ability to understand the streaming input speech while keeping the LLM frozen.
 - The first stage shown in Fig.~\ref{fig:speech_input}(a) is the same as the training process of a common speech recognition model.
@@ -112,9 +112,9 @@ The dataset constructed in this way will be completely compatible with the LLM b
 Subsequently, we use a multi-speaker TTS system to generate data in the speech modality for the questions part and add trainable prompt embedding before each question in the multi-round to guide the LLM to achieve the ability of speech input to text output.
 In this stage, the trainable special tokens in stage 2 will be dropped, only the prompt embedding part is trainable and they use the same parameters for each question, the speech encoder is frozen to maintain the acoustic robustness obtained from stage 2, and the LLM is also frozen to ensure that its intelligence is not affected.
 
-### 3.3.Modeling of Speech Output
+### 3.3·Modeling of Speech Output
 
-#### 3.3.1.Architecture
+#### 3.3.1·Architecture
 
 Inspired by VALL-E~\citep{chen2024vall}, ***Freeze-Omni*** uses a token-based speech decoder which contains NAR prefill and AR generate stage to achieve speech output capabilities.
 The speech decoder mainly consists of the NAR decoder, the AR decoder, and the decoder of a codec model.
@@ -122,7 +122,7 @@ Both the NAR decoder and AR decoder are built upon transformer blocks.
 The NAR decoder is used to model the semantic features from the output of LLM, and then the AR decoder generates speech tokens based on the output of the NAR decoder.
 Finally, a decoder of the codec model converts the speech tokens into a speech stream.
 
-#### 3.3.2.Training Strategy
+#### 3.3.2·Training Strategy
 
 For the modeling of speech output, we still use a 3-stage training method as shown in Fig.~\ref{fig:speech_output}, enabling ***Freeze-Omni*** to obtain the ability of generate speech from the output of LLM while keeping the LLM frozen.
 
@@ -140,7 +140,7 @@ The text token label for AR speech decoder is the speech data produced by the ou
 In this stage, the NAR prefix speech decoder uses different parameters from the NAR and AR speech decoders, and only the parameters of the NAR prefix speech decoder are trainable while the parameters of other networks are frozen.
 Because the style of the text tokens produced by the LLM is different from that of the text in the large amount of text-speech paired data obtainable in stage 2, the significance of the third stage lies in closely coupling the speech decoder with the output of the LLM to reduce the occurrence of bad cases.
 
-### 3.4.Design for Duplex Dialogue
+### 3.4·Design for Duplex Dialogue
 
 After the above training process, ***Freeze-Omni*** has the ability of speech input to speech output.
 However, to better approximate the natural form of speech-to-speech dialogue, we use multi-task for chunk-level state prediction as shown in Fig~\ref{fig:state}.
@@ -158,11 +158,11 @@ Then, when a user's VAD was triggered, the speech would be sent to the server in
 Since we separated all the kv-cache and CNN cache of the speech encoder and LLM during the inference process, the server only needs to save the inference cache for each user.
 In this way, any model in the server could respond to any chunk of any user, and there was no need to specify which model was used as a monitor or a generator.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-### 4.1.SetUps
+### 4.1·SetUps
 
-#### 4.1.1.Datasets
+#### 4.1.1·Datasets
 
 In this paper, we only randomly selected 60,000 multi-round Q\&A data from \emph{moss-003-sft-data}
 \footnote{\url{https://huggingface.co/datasets/fnlp/moss-003-sft-data}} and used backbone LLM to generate new answers to replace its original one.
@@ -172,7 +172,7 @@ In stage 3, we used the pairing of speech input and text output of the multi-rou
 For the modeling of the speech output of ***Freeze-Omni***, we used about 3,000h of text-speech paired data generated by a zero-shot TTS system in stage 1 and stage 2.
 In stage 3, we used the pairing of text input and speech output of the multi-round Q\&A data mentioned above.
 
-#### 4.1.2.Model Configuration
+#### 4.1.2·Model Configuration
 
 **LLM backend**
 
@@ -193,16 +193,16 @@ We used TiCodec\footnote{\url{https://github.com/y-ren16/TiCodec}}~\citep{ren202
 For the speech decoder part, both the NAR (Prefix) speech decoder and the AR speech decoder are 4-layer Llama decoder layers with a hidden size of 896.
 The number of parameters for the speech decoder is approximately 120M and the output sample rate of codec model is 24000Hz.
 
-#### 4.1.3.Training
+#### 4.1.3·Training
 
 In training processes we used the Adamw~\citep{Loshchilov2017FixingWD} optimizer with a warm-up learning rate scheduler, and different learning rates were used in different stages.
 The learning rates used in the three stages of the modeling of speech input are 2e-4, 1e-4, and 6e-4 respectively.
 The learning rates used in stage 2\&3 of the modeling of speech output are both 5e-5 and the training hyper-parameters used in stage 1 are the same as that in TiCodec.
 All the experiments were completed on 8 NVIDIA A100 GPUs.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-### 5.1.Results on Speech Input
+### 5.1·Results on Speech Input
 
 To measure the understanding ability of ***Freeze-Omni*** for input speech, as shown in Tab.~\ref{asr}, we verified the accuracy of ASR on different evaluation sets for the model in stage 2 of the modeling of speech input.
 Since the parameters of the speech encoder and adapter used in stage 3 are unchanged compared to those in stage 2, it can be considered that these results can represent the input speech understanding ability of ***Freeze-Omni***.
@@ -211,21 +211,21 @@ From the results, it can be seen that in the case of dynamic chunk training, dec
 If dynamic chunk training is not used but $chunk=4$ decoding is used, better results can be obtained, but this also means that the chunk size cannot be changed in stage 3.
 In this paper, to pursue the best performance, all experiments are completed on the model with this configuration of the last row in Tab.~\ref{asr}.
 
-### 5.2.Results on Speech Output
+### 5.2·Results on Speech Output
 
 Because we investigated the speech-out performance of ***Freeze-Omni*** in a single-speaker case in this paper, we randomly selected 1,000 utterances of text tokens and hidden states output by the LLM as the input of the speech decoder and compared the ASR accuracy of the synthesized speech with the label text.
 As shown in Tab~\ref{tts}, the performance of the model in stage 2 of the modeling of speech output (Speech Decoder w/o Prefix) and the model in stage 3 (Speech Decoder) under different AR decoding parameters $top\text{-}k$ are presented respectively, and CER~(\%) is evaluated using \emph{paraformer-zh}\footnote{\url{https://huggingface.co/funasr/paraformer-zh}}~\citep{gao2022paraformer}.
 From the results, it can be concluded that after introducing the hidden state of the LLM as the input of the NAR prefix speech decoder, the speech decoder can be more completely aligned with the LLM, reducing the occurrence of bad cases and get a lower CER~(\%).
 In addition, the increasing $top\text{-}k$ shows better robustness of the speech decoder with a prefix fine-tune.
 
-### 5.3.Results on Spoken Question Answering
+### 5.3·Results on Spoken Question Answering
 
 To demonstrate the intelligence of ***Freeze-Omni***, we verified the accuracy of spoken question answering on three sets: LlaMA-Questions\footnote{\url{https://github.com/google-research-datasets/LLAMA1-Test-Set}}~\citep{nachmani2023spoken}, Web Questions\footnote{\url{https://huggingface.co/datasets/Stanford/web\_questions}}~\citep{berant-etal-2013-semantic}, and Trivia QA\footnote{\url{https://nlp.cs.washington.edu/triviaqa/}}~\citep{JoshiTriviaQA2017}.
 Since Web Questions and Trivia QA only have text, we used the \emph{edge-tts}\footnote{\url{https://github.com/rany2/edge-tts}} tool with voice at \emph{en-US-BrianNeural} to synthesize them into spoken modality.
 Tab.~\ref{sqa} shows the accuracy of Freeze Omni and its used backbone LLM Qwen2-7B-Instruct on these three sets.
 From the results, it can observed that ***Freeze-Omni*** exhibits excellent performance compared to other models because the accuracy gap between it and the backbone LLM is smaller than that of Moshi, which also verifies that ***Freeze-Omni*** has the same level of intelligence in text and speech modalities.
 
-### 5.4.Analysis on End-to-End Latency
+### 5.4·Analysis on End-to-End Latency
 
 To verify the latency of ***Freeze-Omni*** for speech-to-speech dialogue, we defined two parts of latency, namely statistical latency and non-statistical latency.
 The statistical latency refers to the time from the time the LLM interrupts the user to the first PCM chunk of speech generated.
@@ -236,7 +236,7 @@ According to our case analysis conclusion, the non-statistical latency is about 
 According to the experiment configuration above, this time is about 160ms to 320ms.
 In summary, if we consider the influence of network latency (about 200 to 300ms), the average latency of ***Freeze-Omni*** used in real scenarios will be controlled at about 1.2 seconds.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 In this paper, we proposed ***Freeze-Omni***, a text-audio multimodal LLM capable of low-latency speech-to-speech dialogue, which does not need fine-tuning the LLM, showing excellent performance in various evaluation tasks.
 In the future, to explore more speech dialogue capabilities, we plan to do the following work:
