--- a/Models/SpeechLM/2024.11.04_Align-SLM.md
+++ b/Models/SpeechLM/2024.11.04_Align-SLM.md
@@ -46,14 +46,14 @@ Experimental results show that our method achieves state-of-the-art performance 
 
 实验结果表明我们的方法在大多数基准上都实现了最先进的性能, 突显了偏好优化对提高口语语言模型语义理解的重要性.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
