--- a/Models/SpeechLM/2024.07.11_MELLE.md
+++ b/Models/SpeechLM/2024.07.11_MELLE.md
@@ -48,7 +48,7 @@ See https://aka.ms/melle for demos of our work.
 实验说明, 相比两阶段的编解码器语言模型 **VALL-E** 及其变体, 单阶段的 ***MELLE*** 能够通过避免采样离散编码的固有缺陷来缓解稳健性问题, 在多个指标上都取得了优异的性能, 最重要的是, 它提供了一种更简洁的范式.
 可以访问 https://aka.ms/melle 获得相关的演示音频.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 The objective of next-token prediction, which involves predicting the next discrete token based on the previous tokens as condition, is foundational to the recent progress observed in autoregressive large language models (LLMs).
 Recently, the success of LLMs in natural language processing (NLP) tasks has encouraged the exploration of autoregressive language modeling approaches in audio synthesis fields (**AudioLM (2022)**; **VALL-E (2023)**).
@@ -85,7 +85,7 @@ It also outperforms previous neural codec language models, including VALL-E and 
 Specifically, ***MELLE*** surpasses the ground truth audios in WER (1.47\% vs. 1.61\%), achieving a 47.9\% relative reduction in WER compared to VALL-E and an 8.1\% reduction compared to **VALL-E 2 (2024)** on the continuation inference task for zero-shot TTS.
 For subjective evaluations, ***MELLE*** is more favorably received by human listeners than previous models, achieving comparable performance to the original ground truth in terms of MOS (4.20 vs. 4.29) and CMOS (-0.032 for ours vs. ground truth), and an even higher SMOS (4.40 vs. 3.94) than the ground-truth speech.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ### Traditional TTS: 传统文本转语音
 
@@ -167,9 +167,9 @@ Different previous works, ***MELLE*** leverages continuous-valued tokens based a
 
 不同于之前的工作, ***MELLE*** 利用基于连续值 Token 的自回归语言模型方法, 并采用变分推断, 实现文本转语音合成.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-### 3.1.Problem Formulation: Mel-Spectrogram Language Modeling <br> 问题形式化: 梅尔频谱语言建模
+### 3.1·Problem Formulation: Mel-Spectrogram Language Modeling <br> 问题形式化: 梅尔频谱语言建模
 
 <details>
 <summary>原文</summary>
@@ -222,7 +222,7 @@ $$
 在推理时, ***MELLE*** 通过类似 VALL-E 的提示执行零样本文本转语音任务.
 给定文本内容 $\pmb{x}$, 语音提示 $\tilde{\pmb{x}}$ 和相应的梅尔频谱 $\tilde{\pmb{y}}$, 模型被设计用于生成相应内容的目标梅尔频谱 $\pmb{y}$, 同时保持原始提示语音的特征, 在每步最大化下列分布的似然概率 $\argmax_{\pmb{y}} p(\pmb{y}_{t\cdot r:(t+1)\cdot r} \mid [\tilde{\pmb{x}}; \pmb{x}; \tilde{\pmb{y}}; \pmb{y}_{<t\cdot r}]; \theta)$, 其中 $[;]$ 表示拼接操作, 若 $r=1$ 则回到标准模式.
 
-### 3.2.Architecture: 架构
+### 3.2·Architecture: 架构
 
 ![Images/2024.07.11_MELLE_Fig.01.png](Images/2024.07.11_MELLE_Fig.01.png)
 
@@ -251,7 +251,7 @@ Moreover, by adjusting the reduction factor, ***MELLE*** can generate multiple m
 这种简化显著提高计算和存储效率.
 此外, 通过调整缩减因子, ***MELLE*** 可以一次生成多个梅尔频谱帧, 进一步提高效率, 同时仍然保持优秀性能.
 
-#### 3.2.1.Autoregressive Language Model: 自回归语言模型
+#### 3.2.1·Autoregressive Language Model: 自回归语言模型
 
 <details>
 <summary>原文</summary>
@@ -271,7 +271,7 @@ The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by t
 语言模型由多头注意力和前馈层块组成, 接受文本和声学嵌入的拼接作为输入, 建模语义和声学信息之间的依赖关系.
 语言模型的输出 $\pmb{e}_t$ 随后被 ***MELLE*** 的后续模块处理, 用于生成下一帧输出, 具体细节见下一节.
 
-#### 3.2.2.Latent Sampling Module: 隐采样模块
+#### 3.2.2·Latent Sampling Module: 隐采样模块
 
 <details>
 <summary>原文</summary>
@@ -334,7 +334,7 @@ $$
 
 注: 隐采样模块是可微的, 采用了重采样技术.
 
-#### 3.2.3.Stop Prediction Layer and Post-Net: 停止预测层和后网络
+#### 3.2.3·Stop Prediction Layer and Post-Net: 停止预测层和后网络
 
 <details>
 <summary>原文</summary>
@@ -354,7 +354,7 @@ During training, the model is trained using teacher-forcing; while during infere
 在训练时, 模型使用教师强迫方式训练;
 在推理时, 后网络在自回归生成结束后处理 $\pmb{y}'$.
 
-### 3.3.Training Objective: 训练目标
+### 3.3·Training Objective: 训练目标
 
 <details>
 <summary>原文</summary>
@@ -502,7 +502,7 @@ During this calculation, positive and negative frames are extremely imbalanced, 
 在计算时, 正样本帧和负样本帧相当不平衡, 因为每条发言只有一个正样本帧表示停止.
 为了解决这个问题, 我们为 BCE 损失中的正样本帧赋予更大的权重 (100).
 
-### 3.4.Inference: In-Context Learning for Mel-Spectrogram<br>推理: 梅尔频谱的上下文学习
+### 3.4·Inference: In-Context Learning for Mel-Spectrogram<br>推理: 梅尔频谱的上下文学习
 
 <details>
 <summary>原文</summary>
@@ -528,15 +528,15 @@ With the strong in-context learning capability from LLM, ***MELLE*** is capable 
 这种自动化的方法确保了自适应和一致的采样, 减少了人力, 并使得方法不依赖于领域.
 通过 LLM 的强有力的上下文学习能力, ***MELLE*** 能够为未见过的发言人生成高质量, 自然的语音, 而无需微调.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 #TODO
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 #TODO
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 <details>
 <summary>原文</summary>
