--- a/Models/SpeechLM/2024.06.03_ControlSpeech.md
+++ b/Models/SpeechLM/2024.06.03_ControlSpeech.md
@@ -57,7 +57,7 @@ The relevant code and demo are available at https://github.com/jishengpeng/Contr
 我们希望 ***ControlSpeech*** 能够成为可控语音合成的下一代基础范式.
 相关代码和示例可在 https://github.com/jishengpeng/ControlSpeech 获得.
 
-## 1.Introduction
+## 1·Introduction
 
 <details>
 <summary>展开原文</summary>
@@ -171,7 +171,7 @@ We also reproduced related baselines and open-sourced them along with ***VccmDat
   我们还在 ***ControlToolkit*** 中复现了相关的基线并开源了 ***VccmDataset***.
 - 我们进行了全面的实验, 证明了 ***ControlSpeech*** 在可控性, 音色相似性, 音频质量, 健壮性, 泛化能力方面都具有与 SOTA 相当或更好的性能.
 
-## 2.Related Works
+## 2·Related Works
 
 <details>
 <summary>展开原文</summary>
@@ -188,7 +188,7 @@ However, we encourage reviewers to closely examine the connections and distincti
 但是, 我们鼓励评审者仔细审查 ***ControlSpeech*** 与相关工作之间的联系和区别.
 注: 由附录 A 移动至此.
 
-### A.1.Discrete Codec Model
+### A.1·Discrete Codec Model
 
 <details>
 <summary>展开原文</summary>
@@ -226,7 +226,7 @@ Therefore, we utilize the pre-trained [FACodec](../Diffusion/2024.03.05_NaturalS
 然而, 与 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 相比我们的努力没有产生明显的改善.
 因此, 我们使用预训练的 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 提取 ***ControlSpeech*** 中的相应编解码器表示.
 
-### A.2.Zero-shot TTS
+### A.2·Zero-shot TTS
 
 <details>
 <summary>展开原文</summary>
@@ -262,7 +262,7 @@ It is noteworthy that current zero-shot TTS models are unable to achieve arbitra
 值得注意的是, 当前的零样本 TTS 模型无法实现任意语言风格控制.
 ***ControlSpeech*** 是第一个 TTS 模型, 能够同时实现零样本音色克隆和风格控制.
 
-### A.3.Text prompt based controllable TTS
+### A.3·Text prompt based controllable TTS
 
 <details>
 <summary>展开原文</summary>
@@ -289,7 +289,7 @@ The introduction of ***ControlSpeech*** significantly expands the boundaries of 
 值得注意的是现有风格可控文本转语音模型要么和说话人无关, 要么只能通过说话人 ID 控制音色, 没有声音克隆能力.
 ***ControlSpeech*** 引入了语音风格可控的 TTS 模型, 扩展了控制 TTS 任务的边界.
 
-## 3.ControlSpeech
+## 3·ControlSpeech
 
 <details>
 <summary>展开原文</summary>
@@ -305,7 +305,7 @@ Finally, we will discuss the training loss and inference process of ***ControlSp
 然后, 我们将详细解释编解码器的解耦和生成过程, 并介绍 ***Style Mixture Semantic Density (SMSD)*** 模块.
 最后, 我们将讨论 ***ControlSpeech*** 的训练损失和推理过程.
 
-### 3.1.Overall
+### 3.1·Overall
 
 <details>
 <summary>展开原文</summary>
@@ -338,7 +338,7 @@ These representations are then concatenated and upsampled into speech through th
 通过输入风格描述 $X_s$, 内容文本 $X_c$, 语音提示 $X_t$, ***ControlSpeech*** 试图依次生成对应的风格编解码 $Y_s$, 内容编解码 $Y_c$, 音色嵌入 $Y_t$.
 这些表示之后拼接后通过预训练编解码器解码器 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 进行上采样, 生成语音.
 
-### 3.2.Decoupling and Generation of Codec
+### 3.2·Decoupling and Generation of Codec
 
 <details>
 <summary>展开原文</summary>
@@ -449,7 +449,7 @@ $$
 
 其中 $\mu_c$ 和 $\sigma_c^2$ 是 $Y_{codec}$ 的隐藏表示的均值和方差.
 
-### 3.3.Style Mixture Semantic Density Modules
+### 3.3·Style Mixture Semantic Density Modules
 
 <details>
 <summary>展开原文</summary>
@@ -588,7 +588,7 @@ $$
 
 #TODO
 
-### 3.4.Training and Inference
+### 3.4·Training and Inference
 
 <details>
 <summary>展开原文</summary>
@@ -634,9 +634,9 @@ $$
 然后, 我们根据其置信度分数保留 $P_j$ 个候选者, 其中 $P_j$ 遵循余弦调度.
 最后, 通过将音色提示通过条件归一化层集成, 并将其输入到编解码器解码器中, 我们生成最终的语音输出.
 
-## 4.Experiment
+## 4·Experiment
 
-### 4.1.ControlToolkit
+### 4.1·ControlToolkit
 
 
 <details>
@@ -709,7 +709,7 @@ We provide a detailed explanation of these metrics and their use cases in the ma
 此外, 为了评估风格可控的多对多场景, 我们设计了特定的指标：MOS-TS (音色相似度) , MOS-SD (风格多样性) 和MOS-SA (风格准确度) .
 我们将在多对多实验部分详细解释这些指标及其用例.
 
-### 4.2.Evaluation on style controllability
+### 4.2·Evaluation on style controllability
 
 We first compared the performance of ***ControlSpeech*** with various models on the style controllability task.
 The evaluation was conducted on the 1,500-sample controllable test set from the ***VccmDataset***.
@@ -728,7 +728,7 @@ However, it falls slightly behind PromptStyle and [InstructTTS](../Prompt/2023.0
 We believe this is due to the limitations imposed by the [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) approach, which constrains the upper bound of ***ControlSpeech***'s performance. 4) We further attempted to replace the GT timbre in the test set with the timbre from the prompt test set.
 We found that while the audio quality-related metrics remained unchanged, the controllability-related metrics, except for speech speed accuracy, generally decreased by 5%-10%.
 
-### 4.3.Evaluation on the timbre cloning task
+### 4.3·Evaluation on the timbre cloning task
 
 To evaluate the timbre cloning capability of ***ControlSpeech*** in an out-of-domain speaker scenario, we compared the performance of ***ControlSpeech*** with models such as [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) and MobileSpeech on the out-of-domain speaker test set from the ***VccmDataset***.
 The out-of-domain speaker test set consists of 1,086 test utterances, ensuring that none of the speakers were present in the training set.
@@ -738,7 +738,7 @@ We observed that in terms of robustness metrics, the zero-shot TTS systems train
 We attribute this to the performance gains from the pre-trained speaker prompt component in ***ControlSpeech***, which was trained on 60,000 hours of speaker data.
 Additionally, in the MOS metric, we found that although ***ControlSpeech*** can further control styles, it still maintains performance comparable to zero-shot TTS systems in terms of timbre cloning.
 
-### 4.4.Evaluation on the out-of-domain style control task
+### 4.4·Evaluation on the out-of-domain style control task
 
 We further tested the controllability of style-controllable models under out-of-domain style descriptions.
 We compared the performance of ***ControlSpeech*** with controllable baseline models on the out-of-domain style test set from the ***VccmDataset***.
@@ -750,7 +750,7 @@ The accuracy of speech speed and energy is markedly higher for ***ControlSpeech*
 Similar to the results of Table 1, the pitch accuracy of ***ControlSpeech*** is slightly lower.
 We believe this is due to pitch inconsistencies arising from the simultaneous control of style and timbre cloning.
 
-### 4.5.Evaluation on style controlled many-to-many problems
+### 4.5·Evaluation on style controlled many-to-many problems
 
 To better evaluate the performance of style-controllable models on many-to-many tasks, we compared the results of ***ControlSpeech*** with controllable baseline models on the many-to-many test set from the ***VccmDataset***.
 Specifically, the MOS-TS metric was used to assess whether the timbre remains stable across 60 different style descriptions for four speakers.
@@ -760,7 +760,7 @@ The experimental results are shown in Table 4.
 We found that ***ControlSpeech*** significantly outperforms PromptStyle and [InstructTTS](../Prompt/2023.01.31_InstructTTS.md) in both the MOS-SA and MOS-SD metrics.
 This indicates that the unique ***SMSD*** module design in ***ControlSpeech*** enables it to synthesize speech that is both accurate and diverse.
 
-### 4.6.Ablation experiment
+### 4.6·Ablation experiment
 
 In this section, we validated the necessity of the decoupling scheme and the ***SMSD*** module.
 Additionally, in appendix F and appendix G, we examined the impact of hyperparameters for mixed distributions and various noise models.
@@ -775,7 +775,7 @@ This suggests that the speech prompt and style prompt may interfere with each ot
 Specifically, we replaced the ***SMSD*** module with a style encoder and referred to this experimental model as ***ControlSpeech*** w/o ***SMSD***.
 As shown in Table 4, ***ControlSpeech*** w/o ***SMSD*** performed significantly worse in the MOS-SA and MOS-SD metrics compared to ***ControlSpeech***, thus strongly validating that the ***SMSD*** module enables more fine-grained control of the model's style and increases style diversity through style sampling.
 
-## 5.Conclusion
+## 5·Conclusion
 
 <details>
 <summary>展开原文</summary>
